--- a/assets/css/weather-icons.css
+++ b/assets/css/weather-icons.css
@@ -44,7 +44,7 @@
 .wi-day-cloudy-windy:before {
   content: "\f001";
 }
-.wi-day-cloudy:before {
+.wi-day-clouds:before {
   content: "\f002";
 }
 .wi-day-fog:before {
