--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -68,15 +68,6 @@ ul a {
   color: #CFCFCF;
 }
 
-#weather.pill > * {
-  border: none;
-  margin-left: 60px;
-}
-
-#weather {
-  margin-right: 60px;
-}
-
 .pad5 {
   padding: 5px;
 }
@@ -105,7 +96,7 @@ ul a {
   transform: translate(0, 100px);
 }
 
-#show-settings {
+.zIndex {
   z-index: 100000;
 }
 
