Add a globe component to the bottom-left hand corner of the screen showing the current map location.

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -11,6 +11,17 @@ body {
   width: 100%;
 }
 
+#globe-div {
+  width: 170px;
+  height: 170px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 100;
+}
+
 .vingette {
   position: absolute;
   top: 0;
